# stock-screener

./: .dockerignore  .env.docker.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.ds220.yml  docker-compose.https.yml  docker-compose.override.example.yml  docker-compose.prod.yml  docker-compose.release.yml  docker-compose.yml  issues.jsonl
.beads/: .gitignore  (+2 more)
xui-reader/: README.md  pyproject.toml
xui-reader/docs/: clean-machine-onboarding.md  operator-handoff-checklist.md  release-notes-template.md  release-readiness-checklist.md
xui-reader/src/xui_reader/: __init__.py  auth.py  cli.py  config.py  errors.py  logging.py  models.py  profiles.py
xui-reader/src/xui_reader/browser/: __init__.py  policy.py  session.py
xui-reader/src/xui_reader/collectors/: __init__.py  base.py  timeline.py
xui-reader/src/xui_reader/diagnostics/: __init__.py  artifacts.py  base.py  doctor.py  events.py
xui-reader/tests/: test_auth.py  test_browser_policy.py  test_browser_session.py  test_cli.py  test_collectors_timeline.py  test_config.py  test_diagnostics_artifacts.py  test_diagnostics_doctor.py  test_diagnostics_events.py  test_extract_fixture_sanitizer.py  test_extract_normalize.py  test_extract_selectors.py  test_extract_tweets.py  test_imports.py  test_profiles.py  test_scheduler_merge.py  test_scheduler_read.py  test_scheduler_timing.py  test_scheduler_watch.py  test_store_checkpoints.py  test_store_sqlite.py  test_testing_time_control.py
xui-reader/tests/fixtures/: normalization_edge_cases.json
(+1547 files in other folders)
