[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "xui-reader"
version = "0.1.0"
description = "Read-only X UI reader package scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "platformdirs>=4.0",
  "playwright>=1.40",
  "pydantic>=2.0",
  "rich>=13.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.9",
]

[project.scripts]
xui = "xui_reader.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
